# template-sfml

./: CMakeLists.txt  main.cpp
